--- a/index.css
+++ b/index.css
@@ -1,7 +1,14 @@
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 #outer {
     width: 600px;
     height: 600px;
     padding: 5px;
+    gap: 6px;
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
@@ -12,9 +19,9 @@
 
 .inner {
     border: 1px solid red;
-    flex-basis: 33%;
-    width: 180px;
-    height: 180px;
+    flex-basis: 32%;
+    width: 170px;
+    height: 170px;
     display: flex;
     align-items: center;
     justify-content: center;
